# UberThinking-

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  fix_docstrings.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
analytics/: analytics.py
config/: config.py
dashboard/: app.py  ui.py
dashboard/pages/: 1_Analytics.py  1_overview.py  2_Prediction.py  2_location_analytics.py  3_ride_explorer.py  4_prediction.py  5_streaming_monitor.py
data/raw/: README.md
data/zone_lookup/: README.md
docker/: Dockerfile  README.md  docker-compose.yml
docs/: architecture.md
ml/: pipeline.py  predict.py  train_model.py
models/: README.md
output/parquet/: README.md
preprocessing/: cleaning.py
producer/: kafka_producer.py
scripts/: setup_kafka_topic.md  setup_kafka_topic.sh
src/: config.py  generate_stream.py  predict.py  streaming_job.py  train_model.py  transforms.py
streaming/: schema.py  spark_stream_consumer.py
tests/: test_analytics.py  test_cleaning.py  test_ml_pipeline.py  test_transforms.py
