[project]
name = "uberthinking"
version = "0.2.0"
description = "UberThinking — Real-Time Taxi Analytics with Apache Spark and Streamlit"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
    "pyspark==3.5.1",       # Spark DataFrames, SQL, Structured Streaming, MLlib
    "streamlit==1.37.1",    # dashboard
    "plotly==5.23.0",       # charts
    "pandas==2.2.2",        # small local data handling
    "pyarrow==16.1.0",      # read/write Parquet
    "python-dotenv==1.0.1", # load .env
    "pytest==8.3.2",        # tests
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
